--- a/css/splash.css
+++ b/css/splash.css
@@ -17,7 +17,7 @@ body {
   align-content: center;
   align-items: center;
   text-align: center;
-  width: 100%;
+  width: 100% !important;
   font-size: 4rem;
 }
 
@@ -31,6 +31,7 @@ input {
   text-align: center;
   transition: all ease 0.4s;
   overflow-wrap: break-word;
+  width: 100%;
   resize: none;
 }
 
