--- a/css/splash.css
+++ b/css/splash.css
@@ -17,7 +17,7 @@ body {
   align-content: center;
   align-items: center;
   text-align: center;
-  width: 100% !important;
+  width: 100%;
   font-size: 4rem;
 }
 
