--- a/css/splash.css
+++ b/css/splash.css
@@ -63,6 +63,7 @@ input::placeholder {
   transition: all ease 0.4s;
   white-space: normal;
   justify-content: center;
+  width: 30%;
 }
 
 .classyBtn:focus {
@@ -76,6 +77,7 @@ input::placeholder {
   color:  #fff;
   background-color: #ac75ff;
   transform: scale(1.1);
+  width: 40%;
 }
 
 .classyBtn:active:enabled {
