--- a/css/splash.css
+++ b/css/splash.css
@@ -31,8 +31,11 @@ input {
   text-align: center;
   transition: all ease 0.4s;
   overflow-wrap: break-word;
-  width: 100%;
   resize: none;
+}
+
+#emailField {
+  width: 100%;
 }
 
 input:hover {
@@ -63,7 +66,6 @@ input::placeholder {
   transition: all ease 0.4s;
   white-space: normal;
   justify-content: center;
-  width: 30% !important;
 }
 
 .classyBtn:focus {
@@ -77,7 +79,6 @@ input::placeholder {
   color:  #fff;
   background-color: #ac75ff;
   transform: scale(1.1);
-  width: 40% !important;
 }
 
 .classyBtn:active:enabled {
