--- a/css/splash.css
+++ b/css/splash.css
@@ -8,6 +8,20 @@ body {
   font-family: 'Lato';
 }
 
+.container {
+  width: 300px;
+  margin: auto;
+  transition: all ease 0.2s;
+  -webkit-transition: all ease 0.2s;
+  transform: scale(1.0);
+  -webkit-transform: scale(1.0);
+}
+
+.container:hover {
+  transform: scale(1.03);
+  -webkit-transform: scale(1.03);
+}
+
 .notice {
   margin-top: 30px;
   font-size: 1.7rem;
@@ -48,7 +62,7 @@ input::placeholder {
   color: rgba(255, 255, 255, 0.3)
 }
 
-input #emailField {
+#emailField {
   width: 100%;
 }
 
@@ -124,11 +138,13 @@ input #emailField {
     overflow: auto;
     top: 0px;
     left: 0px;
-    background: rgba(0, 0, 0, 0.3); /*can be anything, of course*/
+    background: rgba(0, 0, 0, 0.1); /*can be anything, of course*/
 }
 
 .stag {
   opacity: 0;
+  transform: scale(1);
+  -webkit-transform: scale(1);
 }
 
 .whiteFade {
